--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
       {
-        "src": "/server.js",
+        "src": "/index.js",
         "use": "@vercel/node"
       }
     ],
@@ -10,9 +10,6 @@
       {
         "src": "/(.*)",
         "dest": "/"
-      }
-    ]
-  }
-
-
-
+      }
+    ]
+  }
