--- a/src/.env
+++ b/src/.env
@@ -1,3 +1,15 @@
-PORT=4000
-EMAIL_USER=sharmayatin0882@gmail.com    
-EMAIL_PASSWORD=hmphajeqemcjirdm
+VITE_EMAIL_USER=itsfakepunjabi@gmail.com
+VITE_EMAIL_PASS=hmphajeqemcjirdm
+ADMIN_EMAIL=sharmayatin0882@gmail.com
+
+
+
+
+
+
+
+
+
+
+
+# EMAIL_PASSWORD=hmphajeqemcjirdm
