--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@mantine/core": "^7.12.2",
     "@mantine/hooks": "^7.12.2",
     "@mui/material": "^6.0.2",
-    "@mui/x-date-pickers": "^7.16.0",
+    "@mui/x-date-pickers": "^7.22.3",
     "axios": "^1.7.7",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -39,6 +39,7 @@
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
     "react-id-generator": "^3.0.2",
     "react-loading": "^2.0.3",
     "react-notifications": "^1.7.4",
